--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,1 +1,66 @@
 @import 'yeticss'
+
+code
+  font-size: 1em
+
+pre[class*="language-"]
+  margin-bottom: 30px !important
+
+header
+  position: fixed
+  width: 100%
+  height: 3em
+  line-height: 2.8em
+  background-color: rgba(200, 200, 200, 0.9)
+  z-index: 1000
+
+/*
+  INDEX PAGE
+*/
+.post-list
+  padding-left: 0
+
+.post-list
+.post-list-item
+  margin: 0 0 .9em 0
+  padding-bottom: 2em
+
+.post-list-item
+  list-style-type: none
+  font-size: 1.4em
+  border-bottom: 1px solid rgba(0, 0, 0, .2)
+
+  div
+    font-size: 0.8em
+    color: rgba(0, 0, 0, 0.6)
+
+/*
+  POST PAGE
+*/
+
+.post
+  padding-top: 4em
+
+  h1
+    font-size: 2em
+    margin-bottom: 0
+
+  h2
+    font-size: 1.5em
+    font-weight: 400
+    margin-bottom: 0.3em
+
+  h3
+    font-size: 1.3em
+    font-weight: 300
+    color: rgba(0, 0, 0, 0.6)
+
+@media screen and (max-width: $breakpoint-desktop - 1)
+  header
+    height: 6em
+
+  .post
+    padding-top: 7em
+
+  pre
+    max-height: 30em
