--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,11 +13,14 @@
     </div>
   </header>
   <div class="container">
-    {{#each collections.posts as |post|}}
-    	<div>
-    		<a href="/posts/{{post.slug}}/">{{post.title}}</a>
-    	</div>
-    {{/each}}
+    <ol class="post-list">
+      {{#each collections.posts as |post|}}
+      	<li class="post-list-item">
+          <div>{{post.dateLabel}}</div>
+      		<a href="/posts/{{post.slug}}/">{{post.title}}</a>
+      	</li>
+      {{/each}}
+    </ol>
   </div>
 </body>
 </html>
