--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,11 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <header role="banner">
-    <div class="container">
-      <h1>{{title}}</h1>
-    </div>
-  </header>
+  {{> header}}
   <div class="container">
     <ol class="post-list">
   	{{#each collections.posts as |post|}}
