--- a/layouts/post.html
+++ b/layouts/post.html
@@ -8,14 +8,8 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <header role="banner">
-    <div class="container">
-      It's hard to keep your skills sharp. Get notified of new posts.
-      <input type="text" placeholder="level@up.com">
-      <button>Keep me posted, dawg!</button>
-    </div>
-  </header>
-  <div class="container post">
+  {{> header}}
+  <div class="container">
     <h1 class="post-title">{{title}}</h1>
     <h3 class="post-date-label">{{dateLabel}}</h3>
     {{{contents}}}
