All kinds of responsive gains. All kinds.

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,8 @@
 <header role="banner">
-  It's hard to keep your skills sharp.
-  <input type="text" placeholder="level@up.com">
-  <button class="button button-approve">Keep me posted, dawg!</button>
+  <span>Want JavaScript Content Sent Right to Your Inbox?</span>
+  <div id="form-container">
+    <input type="text" placeholder="level@up.com">
+    <button id="sub-btn" class="button button-approve">Keep me posted!</button>
+    <button id="sub-btn-phone" class="button button-approve">Send new posts to my inbox!</button>
+  </div>
 </header>
