--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,7 +1,7 @@
 @import 'yeticss'
 
 $desktop-header-height = 3em
-$mobile-header-height = 6em
+$mobile-header-height = 5em
 
 code
   font-size: 1em
@@ -16,9 +16,27 @@ header
   line-height: 2.8em
   background-color: rgba(200, 200, 200, 0.9)
   z-index: 1000
+  display: flex
+  justify-content: center
+
+  input
+    margin: 0.5em
+    margin-right: 0
+    padding-left: 0.3em
+
+  button
+    margin: 0.5em
+    line-height: 0.5em
 
 body > .container
     padding-top: $desktop-header-height + 1
+
+#form-container
+  display: flex
+  justify-content: center
+
+#sub-btn-phone
+  display: none
 
 /*
   INDEX PAGE
@@ -61,12 +79,45 @@ body > .container
     font-weight: 300
     color: rgba(0, 0, 0, 0.6)
 
-@media screen and (max-width: $breakpoint-desktop - 1)
+@media screen and (max-width: $breakpoint-tablet - 1)
   header
     height: $mobile-header-height
+    flex-direction: column
+    align-items: center
+    line-height: 1.5em
+
+    input
+      margin: 0.25em 0
+
+    button
+      margin: 0.25em 0.5em
+      line-height: 0.7em
 
   body > .container
       padding-top: $mobile-header-height + 1
 
   pre
     max-height: 30em
+
+@media screen and (max-width: $breakpoint-smartphone - 1)
+  header
+    > span
+      display: none
+
+    input
+      margin-bottom: 0
+
+    button
+      margin: 0.25em 0
+
+  #form-container
+    width: 85%
+    display: flex
+    flex-direction: column
+    justify-content: center
+
+  #sub-btn
+    display: none
+
+  #sub-btn-phone
+    display: block
