--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{title}}</title>
   <link rel="stylesheet" href="/styles.css">
+  <script src="/mixpanel.js"></script>
 </head>
 <body>
   {{> header}}
