--- a/partials/header.html
+++ b/partials/header.html
@@ -1,8 +1,20 @@
 <header role="banner">
   <span>Want JavaScript Content Sent Right to Your Inbox?</span>
-  <div id="form-container">
-    <input type="text" placeholder="level@up.com">
-    <button id="sub-btn" class="button button-approve">Keep me posted!</button>
-    <button id="sub-btn-phone" class="button button-approve">Send new posts to my inbox!</button>
-  </div>
+  <form name="header_signup" action="http://benclinkinbeard.us3.list-manage.com/subscribe/post?u=6d07cdf61fbc0d9355e8a9a0c&amp;id=c34eca8564" method="post">
+    <div id="form-container">
+      <input type="hidden" value="" name="DOC" id="mce-DOC-header">
+
+      <input type="text" placeholder="level@up.com">
+      <button id="sub-btn"
+              class="button button-approve"
+              onclick="document.header_signup.submit();">
+              Keep me posted!
+      </button>
+      <button id="sub-btn-phone"
+              class="button button-approve"
+              onclick="document.header_signup.submit();">
+              Send new posts to my inbox!
+      </button>
+    </div>
+  </form>
 </header>
