Fix signup form

--- a/partials/header.html
+++ b/partials/header.html
@@ -4,7 +4,7 @@
     <div id="form-container">
       <input type="hidden" value="" name="DOC" id="mce-DOC-header">
 
-      <input type="text" placeholder="level@up.com">
+      <input type="email" name="EMAIL" placeholder="level@up.com">
       <button id="sub-btn"
               class="button button-approve"
               onclick="document.header_signup.submit();">
