--- a/layouts/post.html
+++ b/layouts/post.html
@@ -15,6 +15,7 @@
     <h3 class="post-date-label">{{dateLabel}}</h3>
     {{{contents}}}
   </div>
+  {{> footer}}
   <script src="/prism.js"></script>
 </body>
 </html>
