--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,5 +1,22 @@
+<footer>
+  <div class="container">
+    <p>
+      <a href="/">Ben Clinkinbeard</a> is an independent consultant with more
+      than a decade of experience and a lengthy track record of delivering
+      successful outcomes for clients. You can find him on
+      <a href="https://github.com/bclinkinbeard/">GitHub</a>,
+      <a href="https://www.npmjs.com/~bclinkinbeard">npm</a>,
+      and <a href="https://twitter.com/bclinkinbeard">Twitter</a>.
+    </p>
+
+    <p>
+      <a href="mailto:ben@knowbetter.io">Get in touch</a> if you need a proven
+      leader in architecture, devops, data visualization, R&amp;D, or training.
+    </p>
+  </div>
+</footer>
 <script>
   mixpanel.track('page', { title: document.title });
-  $('#mce-DOC-header').val('Header - ' + document.title);
+  document.getElementById('mce-DOC-header').setAttribute('value', 'Header - ' + document.title);
   // $('#mce-DOC-footer').val('Footer - ' + document.title);
 </script>
