--- a/layouts/post.html
+++ b/layouts/post.html
@@ -6,7 +6,7 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="/prism.css">
   <link rel="stylesheet" href="/styles.css">
-  <script src="/mixpanel.js"></script>
+  <script async src="/mixpanel.js"></script>
 </head>
 <body>
   {{> header}}
