--- a/layouts/post.html
+++ b/layouts/post.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   {{> header}}
-  <div class="container">
+  <main role="main" class="container">
     <h1 class="post-title">{{title}}</h1>
     <h3 class="post-date-label">{{dateLabel}}</h3>
     {{{contents}}}
-  </div>
+  </main>
   {{> footer}}
   <script src="/prism.js"></script>
 </body>
