--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container">
+  <aside class="container">
     <p>
       <a href="/">Ben Clinkinbeard</a> is an independent consultant with more
       than a decade of experience and a lengthy track record of delivering
@@ -13,7 +13,7 @@
       <a href="mailto:ben@knowbetter.io">Get in touch</a> if you need a proven
       leader in architecture, devops, data visualization, R&amp;D, or training.
     </p>
-  </div>
+  </aside>
 </footer>
 <script>
   mixpanel.track('page', { title: document.title });
