Move Mixpanel to the footer as a sync script to hopefully fix analytics decline

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -15,6 +15,7 @@
     </p>
   </aside>
 </footer>
+<script src="/mixpanel.js"></script>
 <script>
   mixpanel.track('page', { title: document.title });
   document.getElementById('mce-DOC-header').setAttribute('value', 'Header - ' + document.title);
