--- a/src/styles.styl
+++ b/src/styles.styl
@@ -5,10 +5,13 @@ $mobile-header-height = 5em
 
 code
   font-size: 1em
+  background-color: rgba(0, 0, 0, 0.1)
 
 pre[class*="language-"]
 pre
   margin-bottom: 30px !important
+  code
+    background-color: rgba(0, 0, 0, 0)
 
 header[role="banner"]
   position: fixed
