--- a/partials/footer.html
+++ b/partials/footer.html
@@ -15,6 +15,20 @@
     </p>
   </aside>
 </footer>
+<!-- Drip -->
+<script type="text/javascript">
+  var _dcq = _dcq || [];
+  var _dcs = _dcs || {}; 
+  _dcs.account = '4436187';
+  
+  (function() {
+    var dc = document.createElement('script');
+    dc.type = 'text/javascript'; dc.async = true; 
+    dc.src = '//tag.getdrip.com/4436187.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(dc, s);
+  })();
+</script>
 <script src="/mixpanel.js"></script>
 <script>
   mixpanel.track('page', { title: document.title });
