Convert forms to Drip

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -31,7 +31,12 @@ header[role="banner"]
     width: 100%
     margin: 0.5em
     margin-right: 0
+    
+  input[type="email"]
     padding-left: 0.3em
+    
+  input[type="submit"]
+    padding: 0 0.6em
 
   button
     width: 100%
@@ -126,7 +131,7 @@ h3
     input
       margin: 0.25em 0
 
-    button
+    input[type="submit"]
       margin: 0.25em 0.5em
       line-height: 0.7em
 
@@ -150,8 +155,10 @@ h3
     input
       margin-bottom: 0
 
-    button
+    input[type="submit"]
       margin: 0.25em 0
+      padding: 0.5em
+      line-height: 0.7em
 
   footer
     width: 100%
