--- a/partials/header.html
+++ b/partials/header.html
@@ -1,20 +1,31 @@
 <header role="banner">
-  <span>Want JavaScript Content Sent Right to Your Inbox?</span>
-  <form name="header_signup" action="http://benclinkinbeard.us3.list-manage.com/subscribe/post?u=6d07cdf61fbc0d9355e8a9a0c&amp;id=c34eca8564" method="post">
+  <span data-drip-attribute="headline">
+    Want D3.js Tutorials Sent Right to Your Inbox?
+  </span>
+  <form data-drip-embedded-form="38729927"
+    action="https://www.getdrip.com/forms/38729927/submissions"
+    method="post">
     <div id="form-container">
       <input type="hidden" value="" name="DOC" id="mce-DOC-header">
 
-      <input type="email" name="EMAIL" placeholder="level@up.com">
-      <button id="sub-btn"
-              class="button button-approve"
-              onclick="document.header_signup.submit();">
-              Keep me posted!
-      </button>
-      <button id="sub-btn-phone"
-              class="button button-approve"
-              onclick="document.header_signup.submit();">
-              Send new posts to my inbox!
-      </button>
+      <input type="email" name="fields[email]" placeholder="level@up.com">
+      
+      <input 
+        id="sub-btn"
+        type="submit"
+        name="submit"
+        value="Keep me posted!"
+        class="button button-approve"
+        data-drip-attribute="sign-up-button" />
+
+      <input 
+        id="sub-btn-phone"
+        type="submit"
+        name="submit"
+        value="Send new posts to my inbox!"
+        class="button button-approve"
+        data-drip-attribute="sign-up-button" />
+
     </div>
   </form>
 </header>
