Finish skeleton migration

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{title}}</title>
-  
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/css/styles.css">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
-</head>
+{{> head}}
 <body>
-  {{> header}}
   <main role="main" class="container">
   	{{#each collections.posts as |post|}}
-      <div>{{post.dateLabel}}</div>
-      <a href="/posts/{{post.slug}}/"><h2>{{post.title}}</h2></a>
+      <h2><a href="/posts/{{post.slug}}/">{{post.title}}</a></h2>
+      <h5>{{post.dateLabel}}</h5>
   	{{/each}}
   </main>
   {{> footer}}
