--- a/layouts/post.html
+++ b/layouts/post.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{title}}</title>
-
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/css/styles.css">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
-</head>
+{{> head}}
 <body>
-  {{> header}}
   <main role="main" class="container">
     <article class="row">
       <header>
-        <h1 class="post-title">{{title}}</h1>
-        <h3 class="post-date-label">{{dateLabel}}</h3>
+        <h1>{{title}}</h1>
+        <h4 class="post-date-label">{{dateLabel}}</h3>
       </header>
       {{{contents}}}
     </article>
