--- a/partials/head.html
+++ b/partials/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{title}}</title>
 
-  <link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
