--- a/static/styles.css
+++ b/static/styles.css
@@ -590,29 +590,17 @@ p {
 }
 
 /* D3 in 5 Days */
+
 .hero {
-  position: absolute;
   left: 0;
   width: 100vw;
   text-align: center;
   color: #ffffff;
   background-size: cover;
-}
-
-.hero,
-.hero_bg {
-  height: 50vh;
   position: relative;
   display: flex;
   width: 100vw;
   margin: 0;
-}
-
-@media (min-width: 768px) {
-  .hero,
-  .hero_bg {
-    height: 75vh;
-  }
 }
 
 .hero_bg {
@@ -621,41 +609,15 @@ p {
   left: 0;
   top: 0;
   bottom: 0;
-  z-index: -1;
-}
-
-.hero_syntax {
-  position: absolute;
-  left: 0;
-  width: 100vw;
-  text-align: center;
-  color: #ffffff;
-  background-size: cover;
-  position: relative;
   display: flex;
   width: 100vw;
   margin: 0;
+  z-index: -1;
 }
 
-.hero_syntax,
-.hero_syntax .hero_bg {
-  height: 90vh;
-}
-
-.hero_syntax .hero_content {
-  margin-top: 6rem;
-}
-
-@media (min-width: 768px) {
-  .hero_syntax .hero_content {
-    margin-top: 12rem;
-  }
-}
-
-@media (min-width: 992px) {
-  .hero_syntax .hero_content {
-    margin-top: 11.5rem;
-  }
+.hero,
+.hero_bg {
+  min-height: 50vh;
 }
 
 .hero_bg_image {
